# hscaml

./: .gitignore  README.md  hie.yaml  hscaml.cabal  package.yaml  stack.yaml
app/: Main.hs
backend/: Optimizer.hs
common/: OCamlType.hs  Types.hs
frontend/: CollectTypeConstraints.hs  InitialTypeInfer.hs  Lexer.hs  Lexer.x  Parser.hs  Parser.y  RenameSymsByScope.hs  Token.hs  TypeCheckUtil.hs  TypeChecker.hs
parser/: Lexer.x  Parser.y  Token.hs
src/HsCaml/Common/: Gensym.hs  OCamlType.hs  Types.hs
src/HsCaml/FrontEnd/: OCamlType.hs  Types.hs
src/HsCaml/HCcore/: ToHCcore.hs  Types.hs
src/HsCaml/LLVM/: Codegen.hs
src/HsCaml/Optimize/: Optimizer.hs
src/HsCaml/Parser/: Lexer.x  Parser.y  Token.hs
src/HsCaml/Typechecker/: .TypeChecker.hs.un~  CheckFinished.hs  CheckTypeCheckIsFinished.hs  CollectTypeConstraints.hs  InitialTypeInfer.hs  RenameSymsByScope.hs  SetTypeConstraints.hs  TypeCheckEff.hs  TypeCheckUtil.hs  TypeChecker.hs  UFTypeChecker.hs  UFUtil.hs  Unify.hs
test/: HCcoreSpec.hs  ParserSpec.hs  Spec.hs  TypeCheckSpec.hs
typechecker/: CheckTypeCheckIsFinished.hs  CollectTypeConstraints.hs  InitialTypeInfer.hs  RenameSymsByScope.hs  SetTypeConstraints.hs  TypeCheckUtil.hs  TypeChecker.hs  Unify.hs
