name:                hscaml
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hscaml#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HsCaml.FrontEnd.Types
                     , HsCaml.FrontEnd.OCamlType
                     , HsCaml.Parser.Parser, HsCaml.Parser.Lexer, HsCaml.Parser.Token
                     , HsCaml.TypeChecker.TypeCheckUtil
                     , HsCaml.TypeChecker.TypeChecker
                     , HsCaml.TypeChecker.RenameSymsByScope
                     , HsCaml.TypeChecker.CollectTypeConstraints
                     , HsCaml.TypeChecker.InitialTypeInfer
                     , HsCaml.TypeChecker.Unify
                     , HsCaml.TypeChecker.SetTypeConstraints
                     , HsCaml.TypeChecker.CheckTypeCheckIsFinished
                     , HsCaml.Optimize.Optimizer
                     , HsCaml.LLVM.Codegen
                     , HsCaml.HCcore.Types
                     , HsCaml.HCcore.ToHCcore

  build-depends:       base >= 4.7 && < 5
                     , hspec >= 2.4.4
                     , parsec >= 3.1
                     , lens >= 4.15
                     , zippers >= 0.2
                     , text >= 1.2
                     , llvm-hs-pure >= 5.0
                     , llvm-hs >= 5.0
                     , array >= 0.5
                     , bytestring >= 0.10
                     , mtl >= 2.2
                     , containers >= 0.5
                     , monad-skeleton >= 0.1
                     , text-latin1 >= 0.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  build-tools:         alex, happy

executable hscaml-exe
  hs-source-dirs:      App
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , hscaml
                     , hspec >= 2.4.4
                     , parsec >= 3.1
                     , text >= 1.2
  default-language:    Haskell2010

test-suite hscaml-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       ParserSpec
                     , TypeCheckSpec
  main-is:             Spec.hs
  build-depends:       base
                     , hscaml
                     , hspec >= 2.4
                     , hspec >= 2.4.4
                     , parsec >= 3.1
                     , text >= 1.2
                     , mtl >= 2.2
                     , lens >= 4.15
                     , containers >= 0.5
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hscaml
